[package]
name = "ddbot"
version = "0.1.1"
edition = "2021"

[dependencies]
bincode = "1.3.3"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
color-eyre = "0.6.3"
derive_more = "0.99.18"
flate2 = "1.0.35"
log = "0.4.22"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["json"] }
walkdir = "2.5.0"
