[package]
name = "ddbstp"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
serde_json = "1.0.133"
sqlx = "0.7.4"
iwf = { path = "../../../iwf" , features = ["postgres"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["json"] }
tabled = "0.15.0"
derive_more = { version = "1.0.0", features = ["from"] }
camino = { version = "1.1.9", features = ["serde1"] }
rust_xlsxwriter = { version = "0.73.0", features = ["serde"] }
log = "0.4.22"
