[package]
name = "ddbtbl"
version = "0.1.0"
edition = "2021"

[dependencies]
iwf = { path = "../../../iwf" , features = ["postgres"]}
ddbot = { path = "../ddbot" }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
sqlx = "0.7.4"
modql = "0.3.10"
sea-query = { version = "0.30.7", features = ["with-time", "with-chrono", "postgres-array", "with-json"] }
chrono = { version = "0.4.38", features = ["serde"] }
sea-query-binder = { version = "0.5.0", features = ["with-time", "with-chrono", "postgres-array", "with-json"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde_yaml = "0.9.34"
serde_with = { version = "3.11.0", features = ["json"] }
tabled = "0.15.0"
docx-rs = "0.4.17"
csv = "1.3.1"
camino = "1.1.9"
rand = "0.8.5"

[features]
postgres = []
default = ["postgres"]
