[package]
name = "ddbtsk"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
csv = "1.3.1"
derive_more = { version = "1.0.0", features = ["from", "from_str"] }
iwf = { path = "../../../iwf" , features = ["postgres"]}
ddbtbl = { path = "../ddbtbl" , features = ["postgres"]}
iwfmacros = { path = "../../../iwf/iwfmacros"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["json"] }
walkdir = "2.5.0"
sqlx = "0.7.4"
log = "0.4.22"

[features]
default = []
