[package]
name = "gls"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
iwf = { path = "../../../iwf", features=["postgres"] }
iwfmacros = { path = "../../../iwf/iwfmacros" }
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
ddbstp = { path = "../ddbstp" }
ddbtbl = { path = "../ddbtbl", features=["postgres"] }
ddbvws = { path = "../ddbvws", features=["postgres"] }
ddbtsk = { path = "../ddbtsk", features=[] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "sqlx-sqlite", "sqlite"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["json"] }
camino = "1.1.9"
tokio = { version = "1.41.1", features = ["full"] }
rust_xlsxwriter = { version = "0.73.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["error", "from"] }
ordered-float = { version = "4.5.0", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"

[features]
rebuild = []
report = []
default = ["report", "rebuild" ]
